add: Create and Read of CRUD done
