# api/routers.go
@@ -1,6 +1,9 @@
 package api
 
 import (
+	"context"
+	h "go-lang/api/handlers"
+
 	"github.com/gofiber/fiber/v2"
 )
 
@@ -15,7 +18,12 @@ func HealthCheck(c *fiber.Ctx) error {
 	return c.JSON(fiber.Map{"status": "ok"})
 }
 
-func RegisterV1Routes(group fiber.Router) {
+func RegisterV1Routes(ctx *context.Context, group fiber.Router) {
 	group.Get("/healthcheck", HealthCheck)
-
+	group.Post("/login", func(c *fiber.Ctx) error {
+		return h.LoginHandler(c, ctx)
+	})
+	group.Post("/register", func(c *fiber.Ctx) error {
+		return h.RegisterHandler(c, ctx)
+	})
 }
